[gd_scene load_steps=8 format=3 uid="uid://cehpuo1nqm551"]

[ext_resource type="Script" uid="uid://dev6jythlqbx6" path="res://sound_settings.gd" id="1_8rhxj"]
[ext_resource type="Shader" uid="uid://dcdwgxqxwddm2" path="res://pause_menu.gdshader" id="1_c353r"]
[ext_resource type="FontFile" uid="uid://caowy3vapkh0n" path="res://fonts/Xolonium-Regular.ttf" id="1_s3i6b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8rhxj"]
shader = ExtResource("1_c353r")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_7ku3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j3v3b"]
resource_name = "Blur"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.780392, 0.784314, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xlvyi"]
_data = {
&"Blur": SubResource("Animation_j3v3b"),
&"RESET": SubResource("Animation_7ku3g")
}

[node name="Sound_Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8rhxj")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_8rhxj")
layout_mode = 0
offset_right = 1936.0
offset_bottom = 1104.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -380.0
offset_right = 404.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s3i6b")
theme_override_font_sizes/font_size = 60
text = "Music Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s3i6b")
theme_override_font_sizes/font_size = 60
text = "Sound Effects Volume"
horizontal_alignment = 1

[node name="HSlider2" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s3i6b")
theme_override_font_sizes/font_size = 60
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xlvyi")
}

[connection signal="value_changed" from="PanelContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
